--- a/doc/部署文档.md
+++ b/doc/部署文档.md
@@ -61,7 +61,10 @@ module.exports = {
     admin: {             
         username: "admin",       //管理后台账号
         password: "123qwe",      //管理后台密码
-    }
+    },
+    
+    enablecalc: true,            //统计功能，true：启用 | false：禁用
+    calcSaveInterval: 1000*300,  //统计数据落地到 mysql 时间间隔，此处为300秒，不配置默认60秒
 }
 ```
 
